--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,23 +39,22 @@ typer = {extras = ["all"], version = "^0.4.0"}
 rich = "^10.14.0"
 Pillow = "9.3.0"
 
-[tool.poetry.dev-dependencies]
-bandit = "^1.7.1"
-black = {version = "^21.10b0", allow-prereleases = true}
+[tool.poetry.group.dev.dependencies]
+bandit = "^1.7.4"
 darglint = "^1.8.1"
+black = {version = "^22.10.0", allow-prereleases = true}
 isort = {extras = ["colors"], version = "^5.10.1"}
-mypy = "^0.910"
-mypy-extensions = "^0.4.3"
-pre-commit = "^2.15.0"
+mypy = "^0.982"
+pre-commit = "^2.20.0"
 pydocstyle = "^6.1.1"
-pylint = "^2.11.1"
-pytest = "^6.2.5"
-pyupgrade = "^2.29.1"
-safety = "^1.10.3"
-coverage = "^6.1.2"
+pylint = "^2.15.5"
+pytest = "^7.2.0"
+pyupgrade = "^3.2.0"
+safety = "^2.3.1"
+coverage = "^6.5.0"
 coverage-badge = "^1.1.0"
-pytest-html = "^3.1.1"
-pytest-cov = "^3.0.0"
+pytest-html = "^3.2.0"
+pytest-cov = "^4.0.0"
 pyfakefs = "5.0.0"
 
 [tool.black]
