--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0"
 commonmark==0.9.1 ; python_version >= "3.8" and python_version < "4.0"
 pillow==9.3.0 ; python_version >= "3.8" and python_version < "4.0"
 pygments==2.13.0 ; python_version >= "3.8" and python_version < "4.0"
-rich==10.16.2 ; python_version >= "3.8" and python_version < "4.0"
+rich==12.6.0 ; python_version >= "3.8" and python_version < "4.0"
 shellingham==1.5.0 ; python_version >= "3.8" and python_version < "4.0"
-typer[all]==0.4.2 ; python_version >= "3.8" and python_version < "4.0"
+typer[all]==0.6.1 ; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "3.9"
