Added PyPi pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,7 @@ jobs:
     - name: Run safety checks
       run: |
         make check-safety
+
+    - name: Build package
+      run: |
+        make build
