--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -7,7 +7,7 @@ on:
       - completed
 
 jobs:
-  pypi:
+  on-success:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -15,7 +15,7 @@ jobs:
         run: |
           make build
 
-      - name: Publish package
+      - name: Publish package to Test PyPI
         if: ${{ github.ref == 'refs/head/dev' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
@@ -23,7 +23,7 @@ jobs:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
 
-      - name: Publish package
+      - name: Publish package to PyPI
         if: ${{ github.ref == 'refs/head/main' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
