--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,5 +1,13 @@
 name: pypi
-on: [push, pull_request]
+on:
+  workflow_run:
+    workflows: 
+      - build
+    branches:
+      - main
+      - dev
+    types:
+      - completed
 
 jobs:
   on-success:
