--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,9 @@
-name: build
+name: Tests
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -41,22 +41,3 @@ jobs:
       - name: Run safety checks
         run: |
           make check-safety
-
-      - name: Build package
-        run: |
-          make build
-
-      - name: Publish package to Test PyPI
-        if: ${{ github.ref == 'refs/head/dev' }}
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
-
-      - name: Publish package to PyPI
-        if: ${{ github.ref == 'refs/head/main' }}
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
