--- a/cookiecutter-config-file.yml
+++ b/cookiecutter-config-file.yml
@@ -2,7 +2,7 @@
 
 default_context:
   project_name: "archive-to-images"
-  project_description: "Awesome `archive-to-images` is a Python cli/package created with https://github.com/TezRomacH/python-package-template"
+  project_description: "Archive-To-Images is a Python CLI to transform archives into images and reverse."
   organization: "Giovanni Pecoraro"
   license: "MIT"
   minimal_python_version: 3.8
