--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,9 @@
-name: build
+name: Tests
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,7 +20,7 @@ jobs:
         run: make poetry-download
 
       - name: Set up cache
-        uses: actions/cache@v2.1.6
+        uses: actions/cache@v3.0.11
         with:
           path: .venv
           key: venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
@@ -41,7 +41,3 @@ jobs:
       - name: Run safety checks
         run: |
           make check-safety
-
-      - name: Build package
-        run: |
-          make build
