--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Tests
+name: Build
 
 on: [push, pull_request]
 
 jobs:
-  tests:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -41,3 +41,7 @@ jobs:
       - name: Run safety checks
         run: |
           make check-safety
+
+      - name: Build package
+        run: |
+          make build
