Enabled PyPi publish

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -28,15 +28,15 @@ jobs:
         run: |
           make build
 
-      - name: Publish test package
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
-
-      # - name: Publish package
+      # - name: Publish test package
       #   uses: pypa/gh-action-pypi-publish@release/v1
       #   with:
       #     user: __token__
-      #     password: ${{ secrets.PYPI_API_TOKEN }}
+      #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      #     repository_url: https://test.pypi.org/legacy/
+
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
